# smart-surveillance-system

./: .gitignore  CMakeLists.txt  Database.cpp  Face.h  GUI.h  Image.cpp  ImageProcessor.cpp  ObjectDetector.cpp  ObjectDetector.h  README.md  gitcrap.cpp  main.cpp  smart-surveillance-system.sln  smart-surveillance-system.vcxproj  smart-surveillance-system.vcxproj.filters
lib/cvui/: cvui.h
lib/opencv/include/opencv2/: cvconfig.h
lib/opencv/x64/vc17/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
libs/opencv/include/opencv2/: opencv_modules.hpp
libs/opencv/x64/vc17/lib/: OpenCVConfig.cmake  opencv_world490.lib  opencv_world490d.lib
src/: Database.cpp  Database.h  Face.cpp  Face.h  GUI.cpp  GUI.h  Image.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  ObjectDetector.cpp  ObjectDetector.h  main.cpp
